--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "minimist": "^1.2.7",
     "moment": "^2.29.4",
     "mongoose": "^6.7.3",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
